--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,5 +41,10 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Need to select image</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Need to take photo</string>
 </dict>
 </plist>
