--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   url_launcher: ^5.7.10
+  image_picker: ^0.6.7+14
 
 dev_dependencies:
   flutter_test:
