--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   url_launcher: ^5.7.10
   image_picker: ^0.6.7+14
+  get: ^3.17.1
 
 dev_dependencies:
   flutter_test:
