--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dev_dependencies:
     sdk: flutter
   hive_generator: ^0.8.2
   build_runner: ^1.10.6
+  flutter_gherkin: ^1.1.9
+  bdd_widget_test: ^0.1.6
+  clock: ^1.0.1
 
 
 # For information on the generic Dart part of this file, see the
