--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,9 @@ on:
   pull_request:
     branches:
       - master
+  push:
+    branches:
+      - master
 
 jobs:
   flutter_test:
@@ -18,7 +21,12 @@ jobs:
           channel: "stable"
       - run: flutter pub get
       - run: flutter analyze
-      #- run: flutter test
+      - run: flutter test --coverage
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1.0.2
+        with:
+          token: ${{secrets.CODECOV_TOKEN}}
+          file: ./coverage/lcov.info
 
   build_ios:
     name: Build Flutter (iOS)
