--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   hive: ^2.0.1
   hive_flutter: ^1.0.0
   path_provider: ^2.0.1
+  intl: ^0.17.0
 
 dev_dependencies:
   integration_test:
