--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@loopback/rest": "^9.3.0",
     "@loopback/rest-explorer": "^3.3.0",
     "@loopback/service-proxy": "^3.2.0",
+    "loopback-connector-mongodb": "^6.0.0",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
