STEP 02: Adding new models

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "type": "git",
     "url": ""
   },
-  "author": "NaschKadse <klein-dominik@web.de>",
+  "author": "LazyPlants <lazyplants2020@gmail.com>",
   "license": "",
   "files": [
     "README.md",
