--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "type": "git",
     "url": ""
   },
-  "author": "LazyPlants <lazyplants2020@gmail.com>",
+  "author": "NaschKadse <klein-dominik@web.de>",
   "license": "",
   "files": [
     "README.md",
@@ -55,20 +55,15 @@
     "@loopback/rest": "^9.3.0",
     "@loopback/rest-explorer": "^3.3.0",
     "@loopback/service-proxy": "^3.2.0",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/lodash": "^4.14.169",
-    "bcryptjs": "^2.4.3",
-    "isemail": "^3.2.0",
-    "loopback-connector-mongodb": "^6.0.0",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@loopback/build": "^6.4.0",
-    "@loopback/eslint-config": "^10.2.0",
+    "source-map-support": "^0.5.19",
     "@loopback/testlab": "^3.4.0",
     "@types/node": "^10.17.59",
+    "@loopback/eslint-config": "^10.2.0",
     "eslint": "^7.25.0",
-    "source-map-support": "^0.5.19",
     "typescript": "~4.2.4"
   }
 }
