--- a/package.json
+++ b/package.json
@@ -55,15 +55,16 @@
     "@loopback/rest": "^9.3.0",
     "@loopback/rest-explorer": "^3.3.0",
     "@loopback/service-proxy": "^3.2.0",
+    "loopback-connector-mysql": "^5.4.4",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@loopback/build": "^6.4.0",
-    "source-map-support": "^0.5.19",
+    "@loopback/eslint-config": "^10.2.0",
     "@loopback/testlab": "^3.4.0",
     "@types/node": "^10.17.59",
-    "@loopback/eslint-config": "^10.2.0",
     "eslint": "^7.25.0",
+    "source-map-support": "^0.5.19",
     "typescript": "~4.2.4"
   }
 }
