--- a/package.json
+++ b/package.json
@@ -55,6 +55,10 @@
     "@loopback/rest": "^9.3.0",
     "@loopback/rest-explorer": "^3.3.0",
     "@loopback/service-proxy": "^3.2.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/lodash": "^4.14.170",
+    "bcryptjs": "^2.4.3",
+    "isemail": "^3.2.0",
     "loopback-connector-mysql": "^5.4.4",
     "tslib": "^2.0.0"
   },
