--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/lodash": "^4.14.170",
     "bcryptjs": "^2.4.3",
     "isemail": "^3.2.0",
+    "jsonwebtoken": "^8.5.1",
     "loopback-connector-mysql": "^5.4.4",
     "tslib": "^2.0.0"
   },
