--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   ],
   "dependencies": {
     "@loopback/authentication": "^7.3.0",
+    "@loopback/authorization": "^0.9.0",
     "@loopback/boot": "^3.4.0",
     "@loopback/core": "^2.16.0",
     "@loopback/repository": "^3.6.0",
