--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   hive_flutter: ^1.0.0
   path_provider: ^2.0.1
   intl: ^0.17.0
+  syncfusion_flutter_charts: ^19.1.65
 
 dev_dependencies:
   integration_test:
