--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
           java-version: "12.x"
       - uses: subosito/flutter-action@v1
         with:
-          channel: "master"
+          channel: "dev"
       - run: flutter pub get
       - run: flutter analyze
       - run: flutter test --coverage
@@ -39,7 +39,7 @@ jobs:
           java-version: "12.x"
       - uses: subosito/flutter-action@v1
         with:
-          channel: "master"
+          channel: "dev"
       - run: flutter pub get
       - run: flutter clean
       - run: flutter build ios --release --no-codesign
@@ -55,7 +55,7 @@ jobs:
           java-version: "12.x"
       - uses: subosito/flutter-action@v1
         with:
-          channel: "master"
+          channel: "dev"
       - run: flutter pub get
       - run: flutter clean
       - run: flutter build apk
