--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,6 @@ jobs:
         with:
           token: ${{secrets.CODECOV_TOKEN}}
           file: ./coverage/lcov.info
-
   build_ios:
     name: Build Flutter (iOS)
     needs: [flutter_test]
@@ -58,4 +57,4 @@ jobs:
           channel: "dev"
       - run: flutter pub get
       - run: flutter clean
-      - run: flutter build apk
+      - run: flutter build apk --release
