--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,8 +8,9 @@ on:
 
 jobs:
   deploy:
+    name: Build and deploy
     runs-on: ubuntu-latest
-    if: github.event.pull_request.merged
+    if: github.event.pull_request.merged == 'true'
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
